se modifica la side bar, además de corregir errores con el footer

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 
 	<!-- My Skill Section -->
 	<section id="skill">
+
 		<div class="container-fluid">
 			<div class="container">
+
 				<div class="row">
 					<div class="col-sm-12 text-center" id="titleSkill">
 						<h3 class="titles"><a href=""></a> My Skills</h3>
@@ -62,6 +64,7 @@
 						<hr class="primary">
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-12" >
 						<ul id="menuSkills" >
@@ -143,7 +146,7 @@
 
 	<!-- Portfolio Section -->
 	<sectoin id="works">
-		<div class="container-fluid " style="background-color:  #F3F3F4; padding: 50px 0px; ">
+		<div class="container-fluid " style="background-color:  #F3F3F4; padding: 50px 0px; min-height: 100vh;">
 			<div class="container">
 						<div class="row">
 							<div class="col-md-12 text-center" >
@@ -156,7 +159,6 @@
 
 
 			<div class="container">
-
 					<div class="row">
 						<div class="col-md-4">
 							<div class="card content">
@@ -191,11 +193,16 @@
 							</div>
 
 						</div>
+				</div>
+
 					</div>
 			</div>
+
+
+
 		</div>
-		
-	</section>
+
+
 
 	<!-- Footer -->
 
